common-applications/test-environment/opendesign-datapertus-test/openlookeng/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: opendesign-datapertus-test-openlookeng-ingress
  namespace: opendesign-datapertus-test
spec:
  tls:
    - hosts:
        - datastatopenlookeng.test.osinfra.cn
      secretName: opendesign-datapertus-test-openlookeng-tls
  rules:
    - host: datastatopenlookeng.test.osinfra.cn
      http:
        paths:
          - backend:
              serviceName: openlookeng-service
              servicePort: 80
            path: /
